--- a/html/Inscrições.html
+++ b/html/Inscrições.html
@@ -67,9 +67,9 @@
 
 	<!-- Conteudo ––––––––––––––––––––––––––––––––––––––––––––––––––-->
 	<div class="main-container">
-		<!--<center>
-			<img id="IMG23" src="../assets/img/23.jpg">
-		</center>-->
+		<--<center>
+			<img id="IMG25" src="../assets/img/23.jpg">
+		</center>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
