--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<span ></span>
 						</div>	
 					</div>
-					<a class="site-text-logo title-mobile" href="index.html">Lista F</a>
+					<a class="site-text-logo title-mobile" href="index.html">ENAAP COIMBRA</a>
 				</div>
 
 			</div>
@@ -71,13 +71,13 @@
 	<!-- Conteudo ––––––––––––––––––––––––––––––––––––––––––––––––––-->
     <div class="main-container">
 		<center>
-			<img id="IMG22" src="assets/img/22.jpg">
+			<img id="IMG22" src="assets/img/24.jpg">
 		</center>
             <div class="main wrapper clearfix">
 				<div class="section-title-area">
 					<div class="row">
 						<div class="col-md-12">
-							<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fwatch%2F%3Fv%3D2051774944906477&width=1000&show_text=false&height=560&appId" width="1000" height="560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+							<iframe id="VIDZINDEX" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fwatch%2F%3Fv%3D2051774944906477&width=1000&show_text=false&height=560&appId" width="1000" height="560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
 							<!--iframe id="VIDZINDEX" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe-->
 						</div>
 					</div>
