--- a/html/Inscrições.html
+++ b/html/Inscrições.html
@@ -31,7 +31,7 @@
 			<div class="container">
 				<div class="logo-box">
 					<p class="site-title">
-                        <img id="IMG2" src="../assets/img/13.png">
+                        <img id="IMG2" src="../assets/img/13.jpg">
 					</p>
                     
 				</div>
@@ -67,7 +67,7 @@
 
 	<!-- Conteudo ––––––––––––––––––––––––––––––––––––––––––––––––––-->
 	<div class="main-container">
-		<--<center>
+		<center>
 			<img id="IMG25" src="../assets/img/23.jpg">
 		</center>
 			<div class="container">
