--- a/html/Inscrições.html
+++ b/html/Inscrições.html
@@ -31,9 +31,8 @@
 			<div class="container">
 				<div class="logo-box">
 					<p class="site-title">
-                        <img id="IMG2" src="../assets/img/13.jpg">
+                        <img id="IMG2" src="../assets/img/13.png">
 					</p>
-                    
 				</div>
 				<div class="nav-fostrap">
 					<ul>
@@ -58,7 +57,7 @@
 							<span ></span>
 						</div>	
 					</div>
-					<a class="site-text-logo title-mobile" href="index.html">Lista F</a>
+					<a class="site-text-logo title-mobile" href="index.html">ENAAP COIMBRA</a>
 				</div>
 
 			</div>
@@ -68,7 +67,7 @@
 	<!-- Conteudo ––––––––––––––––––––––––––––––––––––––––––––––––––-->
 	<div class="main-container">
 		<center>
-			<img id="IMG25" src="../assets/img/23.jpg">
+			<img id="IMG25" src="../assets/img/24.jpg">
 		</center>
 			<div class="container">
 				<div class="row">
