--- a/html/Programa.html
+++ b/html/Programa.html
@@ -42,7 +42,7 @@
 							<a href="../html/Oradores.html"> Oradores</a>
 						</li>
 						<li>
-							<a href="../html/Contactos.html" >Contactos</a>
+							<a href="enaapcoimbra.github.io/html/Contactos.php" >Contactos</a>
 						</li>
 						<li>
 							<a href="../html/Programa.html" >Programa</a>
