--- a/html/Inscrições.html
+++ b/html/Inscrições.html
@@ -57,7 +57,7 @@
 							<span ></span>
 						</div>	
 					</div>
-					<a class="site-text-logo title-mobile" href="index.html">ENAAP COIMBRA</a>
+					<a id="homeMobile" class="site-text-logo title-mobile" href="index.html">ENAAP COIMBRA</a>
 				</div>
 
 			</div>
