--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
 						</li>
 						<li>
 							<a href="html/Inscrições.html" >Inscrições</a>
-							<ul class="dropdown">
-								
-							</ul>
 						</li>
 					</ul>
 				</div>
@@ -61,7 +58,7 @@
 							<span ></span>
 						</div>	
 					</div>
-					<a id="homeMobile" class="site-text-logo title-mobile" href="index.html">ENAAP COIMBRA</a>
+					<a id="homeMobile" class="site-text-logo title-mobile" href="index.html">ENAAP </a>
 				</div>
 
 			</div>
