--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<span ></span>
 						</div>	
 					</div>
-					<a id="homeMobile" class="site-text-logo title-mobile" href="index.html">ENAAP </a>
+					<a id="homeMobile" class="site-text-logo title-mobile" href="index.html">ENAAP COIMBRA</a>
 				</div>
 
 			</div>
