--- a/html/Inscrições.html
+++ b/html/Inscrições.html
@@ -170,7 +170,7 @@
 											Participação em WorkShops.
 										</p>
 										<p>
-											<a href="www.google.com" class="btn btn-primary" role="button" aria-pressed="true">INSCREVE-TE</a>
+											<!--a href="www.google.com" class="btn btn-primary" role="button" aria-pressed="true">INSCREVE-TE</a-->
 										</p>
 									</div>
 								</center>
