--- a/html/Contactos.html
+++ b/html/Contactos.html
@@ -77,7 +77,7 @@
 					<div class="section-title-area">
 						<h2>Entre em contacto conosco</h2>
 					<div class="section-desc">
-						<form name="contactform" method="post" action="send_form_email.php">
+						<form action="https://formspree.io/enaapcoimbra@gmail.com" method="POST" />
 							<table width="450px">
 								<tr>
 									<td valign="top">
