--- a/html/Contactos.html
+++ b/html/Contactos.html
@@ -76,7 +76,7 @@
 					</div>
 					<div class="section-title-area">
 						<h2>Entre em contacto conosco</h2>
-					<div class="section-desc">
+					<div id="form" class="section-desc">
 						<form action="https://formspree.io/enaapcoimbra@gmail.com" method="POST" />
 							<table width="450px">
 								<tr>
@@ -143,7 +143,7 @@
 				</div>
                 <a href="https://www.facebook.com/appfuturo.listaf/"><i id="fb" class="fab fa-facebook fa-3x"></i></a>
 				<a href="https://www.instagram.com/enaap_coimbra2020/"><i id="ig" class="fab fa-instagram fa-3x"></i></a>
-				<a id="email" href="mailto:enaapcoimbra@gmail.com">Dúvidas? Consulta-nos</a>
+				<a id="email" href="#form">Dúvidas? Consulta-nos</a>
 			</div>
 		</footer>
 	</div>
