--- a/html/Programa.html
+++ b/html/Programa.html
@@ -93,7 +93,7 @@
 				</div>
                 <a href="https://www.facebook.com/appfuturo.listaf/"><i id="fb" class="fab fa-facebook fa-3x"></i></a>
 				<a href="https://www.instagram.com/enaap_coimbra2020/"><i id="ig" class="fab fa-instagram fa-3x"></i></a>
-				<a id="email" href="mailto:enaapcoimbra@gmail.com">Dúvidas? Consulta-nos</a>
+				<a id="email" href="../html/Contactos.html">Dúvidas? Consulta-nos</a>
 			</div>
 		</footer>
 	</div>
