--- a/html/Contactos.html
+++ b/html/Contactos.html
@@ -74,9 +74,9 @@
 						<h2>Encontre-nos</h2>
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d592.1479007398559!2d-8.426531770815119!3d40.20833992291648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd22f909a8735357%3A0x4e2efadfc2fcab7c!2sAntiga%20Faculdade%20de%20Farm%C3%A1cia!5e1!3m2!1spt-PT!2spt!4v1570557270960!5m2!1spt-PT!2spt" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 					</div>
-					<div class="section-title-area">
+					<div id="form" class="section-title-area">
 						<h2>Entre em contacto conosco</h2>
-					<div id="form" class="section-desc">
+					<div class="section-desc">
 						<form action="https://formspree.io/enaapcoimbra@gmail.com" method="POST" />
 							<table width="450px">
 								<tr>
