--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 							<a href="html/Oradores.html"> Oradores</a>
 						</li>
 						<li>
-							<a href="html/Contactos.html" >Contactos</a>
+							<a href="html/Contactos" >Contactos</a>
 						</li>
 						<li>
-							<a href="html/Programa.html" >Programa</a>
+							<a href="html/Programa" >Programa</a>
 						</li>
 						<li>
-							<a href="html/Inscrições.html" >Inscrições</a>
+							<a href="html/Inscrições" >Inscrições</a>
 						</li>
 					</ul>
 				</div>
