--- a/Programa.html
+++ b/Programa.html
@@ -37,18 +37,18 @@
 				</div>
 				<div class="nav-fostrap">
 					<ul>
-						<li><a href="../index.html">Home</a></li>
+						<li><a href="index">Home</a></li>
 						<li>
-							<a href="../html/Oradores.html"> Oradores</a>
+							<a href="Oradores"> Oradores</a>
 						</li>
 						<li>
-							<a href="../html/Contactos.html" >Contactos</a>
+							<a href="Contactos" >Contactos</a>
 						</li>
 						<li>
-							<a href="../html/Programa.html" >Programa</a>
+							<a href="Programa" >Programa</a>
 						</li>
 						<li>
-							<a href="../html/Inscrições.html" >Inscrições</a>
+							<a href="Inscrições" >Inscrições</a>
 						</li>
 					</ul>
 				</div>
