--- a/Oradores.html
+++ b/Oradores.html
@@ -36,7 +36,9 @@
 				</div>
 				<div class="nav-fostrap">
 					<ul>
-						<li><a href="index">Home</a></li>
+						<li>
+							<a href="index">Home</a>
+						</li>
 						<li>
 							<a href="Oradores"> Oradores</a>
 						</li>
@@ -57,7 +59,7 @@
 							<span ></span>
 						</div>	
 					</div>
-					<a id="homeMobile" class="site-text-logo title-mobile" href="index.html">ENAAP COIMBRA</a>
+					<a id="homeMobile" class="site-text-logo title-mobile" href="index">ENAAP COIMBRA</a>
 				</div>
 
 			</div>
