--- a/Programa.html
+++ b/Programa.html
@@ -37,18 +37,20 @@
 				</div>
 				<div class="nav-fostrap">
 					<ul>
-						<li><a href="index">Home</a></li>
+						<li>
+							<a href="index">Home</a>
+						</li>
 						<li>
 							<a href="Oradores"> Oradores</a>
 						</li>
 						<li>
-							<a href="Contactos" >Contactos</a>
+							<a href="Contactos">Contactos</a>
 						</li>
 						<li>
-							<a href="Programa" >Programa</a>
+							<a href="Programa">Programa</a>
 						</li>
 						<li>
-							<a href="Inscrições" >Inscrições</a>
+							<a href="Inscrições">Inscrições</a>
 						</li>
 					</ul>
 				</div>
@@ -58,7 +60,7 @@
 							<span ></span>
 						</div>	
 					</div>
-					<a id="homeMobile" class="site-text-logo title-mobile" href="index.html">ENAAP COIMBRA</a>
+					<a id="homeMobile" class="site-text-logo title-mobile" href="index">ENAAP COIMBRA</a>
 				</div>
 
 			</div>
