--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 				</div>
 				<div class="nav-fostrap">
 					<ul>
-						<li><a href="index">Home</a></li>
+						<li>
+							<a href="index">Home</a>
+						</li>
 						<li>
 							<a href="Oradores"> Oradores</a>
 						</li>
