--- a/Oradores.html
+++ b/Oradores.html
@@ -59,7 +59,7 @@
 							<span ></span>
 						</div>	
 					</div>
-					<a id="homeMobile" class="site-text-logo title-mobile" href="index">ENAAP COIMBRA</a>
+					<h2 id="homeMobile" class="site-text-logo title-mobile" href="index">ENAAP COIMBRA</h2>
 				</div>
 
 			</div>
