--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<span ></span>
 						</div>	
 					</div>
-					<a id="homeMobile" class="site-text-logo title-mobile" href="index.html">ENAAP COIMBRA</a>
+					<h1 id="homeMobile" class="site-text-logo title-mobile" href="index.html">ENAAP COIMBRA</h2>
 				</div>
 
 			</div>
@@ -92,7 +92,7 @@
 					<div class = "row">
 						<div class = "col align-self-center">
 						<center>
-							<h1 id = "INDEXH1"> Brevemente </h1>
+							<h4 id = "INDEXH1"> Brevemente </h1>
 						</center>
 						</div>
 					</div>
@@ -204,7 +204,7 @@
 					<div class = "row justify-content-center">
 						<div class = "col-12">
 						<center>
-							<h1 class = "col-12"> Por anunciar </h1>
+							<h4 class = "col-12"> Por anunciar </h1>
 						</center>
 						</div>
 					</div>
