--- a/Inscrições.html
+++ b/Inscrições.html
@@ -80,10 +80,10 @@
 								<center>
 								<div class="section-desc">
 									<p>
-										Estadia incluida.
+										Estadia incluída.
 									</p>
 									<p>
-										Refeições incluidas.
+										Refeições incluídas.
 									<p>
 										Participação em palestras.
 									</p>
@@ -104,10 +104,10 @@
 								<center>
 								<div class="section-desc">
 									<p>
-										Estadia incluida.
+										Estadia incluída.
 									</p>
 									<p>
-										Refeições incluidas.
+										Refeições incluídas.
 									</p>
 									<p>
 										Participação em palestras.
@@ -161,7 +161,7 @@
 											Sem estadia.
 										</p>
 										<p>
-											Refeições incluidas.
+											Refeições incluídas.
 										</p>
 										<p>
 											Participação em palestras.
@@ -169,7 +169,8 @@
 										<p>
 											Participação em WorkShops.
 										</p>
-										<p>
+										<p
+											Mais informações em breve.
 											<!--a href="www.google.com" class="btn btn-primary" role="button" aria-pressed="true">INSCREVE-TE</a-->
 										</p>
 									</div>
