--- a/Inscrições.html
+++ b/Inscrições.html
@@ -5,8 +5,7 @@
 	<!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta charset="utf-8">
   	<title>ENAAP COIMBRA 2020</title>
-  	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="Diogo Henriques" content="">
 	
     <!-- Mobile Specific Metas –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
