--- a/Inscrições.html
+++ b/Inscrições.html
@@ -5,7 +5,8 @@
 	<!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta charset="utf-8">
   	<title>ENAAP COIMBRA 2020</title>
-	<meta name="Diogo Henriques" content="">
+	<meta name="google-site-verification" content="oH2KnjbKKpubFVWltwrwJuDE9-ocGu3lp5qzfkVC6-Q" />
+	<meta name="author" content="Diogo Henriques">
 	
     <!-- Mobile Specific Metas –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
