--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta charset="utf-8">
   	<title>ENAAP COIMBRA 2020</title>
-  	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="keywords" content="enaap,enaap coimbra,enaap coimbra 2020, enaap 202">
+  	<meta name="google-site-verification" content="oH2KnjbKKpubFVWltwrwJuDE9-ocGu3lp5qzfkVC6-Q" />
+	<meta name="author" content="Diogo Henriques">
 	
     <!-- Mobile Specific Metas –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
