--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="keywords" content="enaap,enaap coimbra,enaap coimbra 2020, enaap 202">
   	<meta name="google-site-verification" content="oH2KnjbKKpubFVWltwrwJuDE9-ocGu3lp5qzfkVC6-Q" />
 	<meta name="author" content="Diogo Henriques">
+	<meta name="description" content="O ENAAP 2020 decorre em Coimbra, sabe mais aqui">
 	
     <!-- Mobile Specific Metas –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
