--- a/Contactos.html
+++ b/Contactos.html
@@ -9,9 +9,9 @@
 	
     <!-- Mobile Specific Metas –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<?php include('assets/php/send_form_email.php') ?>
 	<!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<!--link rel="stylesheet" href="../assets/puglins/fontawesome/web-fonts-with-css/css/fontawesome-all.css"-->
+	<link rel="shortcut icon" href="assets/img/favicon.ico">
 	<link rel="stylesheet" href="../assets/css/normalize.min.css">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<link rel="stylesheet" href="../assets/css/styles.css">
