--- a/Oradores.html
+++ b/Oradores.html
@@ -11,6 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<!--link rel="stylesheet" href="../assets/puglins/fontawesome/web-fonts-with-css/css/fontawesome-all.css"-->
+	<link rel="shortcut icon" href="assets/img/favicon.ico">
 	<link rel="stylesheet" href="../assets/css/normalize.min.css">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<link rel="stylesheet" href="../assets/css/styles.css">
