--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+	<link rel="shortcut icon" href="assets/img/favicon.ico">
 	<link rel="stylesheet" href="assets/css/normalize.min.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="stylesheet" href="assets/css/styles.css">
