--- a/Inscrições.html
+++ b/Inscrições.html
@@ -12,9 +12,9 @@
 	<!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<!--link rel="stylesheet" href="../assets/puglins/fontawesome/web-fonts-with-css/css/fontawesome-all.css"-->
 	<link rel="shortcut icon" href="assets/img/favicon.ico">
-	<link rel="stylesheet" href="../assets/css/normalize.min.css">
-	<link rel="stylesheet" href="../assets/css/main.css">
-	<link rel="stylesheet" href="../assets/css/styles.css">
+	<link rel="stylesheet" href="/assets/css/normalize.min.css">
+	<link rel="stylesheet" href="/assets/css/main.css">
+	<link rel="stylesheet" href="/assets/css/styles.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- JSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<script src="https://use.fontawesome.com/cb232bfbf5.js"></script>
