--- a/Inscrições.html
+++ b/Inscrições.html
@@ -26,46 +26,45 @@
 </head>
 <body id="page">
 	<!-- Menu ––––––––––––––––––––––––––––––––––––––––––––––––––-->
-	<div class="header-container">
-		<header class="clearfix">
-			<div class="container">
-				<div class="logo-box">
-                     <img id="IMG2" src="../assets/img/13.png">
-				</div>
-				<div class="nav-fostrap">
-					<ul>
-						<li><a href="index">Home</a></li>
-						<li>
-							<a href="Oradores"> Oradores</a>
-						</li>
-						<li>
-							<a href="Contactos" >Contactos</a>
-						</li>
-						<li>
-							<a href="Programa" >Programa</a>
-						</li>
-						<li>
-							<a href="Inscrições" >Inscrições</a>
-						</li>
-					</ul>
-				</div>
-				<div class="nav-bg-fostrap">
-					<div class="nav-div-fostrap">
-						<div class="navbar-fostrap">
-							<span ></span>
-						</div>	
+	<header>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+				<div class="container">
+					<a class="navbar-brand" href="#">
+						<img src="../assets/img/13.png">
+					</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarResponsive">
+						<ul class="navbar-nav ml-auto">
+							<li class="nav-item">
+								<a class="nav-link" href="index">Home</a>
+									<span class="sr-only">(current)</span>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="Oradores"> Oradores</a>
+							</li>
+							<li>
+								<a class="nav-link" href="Contactos"> Contactos</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="Programa">Programa</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link active" href="Inscrições" >Inscrições</a>
+							</li>
+							
+						</ul>
 					</div>
-					<a id="homeMobile" class="site-text-logo title-mobile" href="index">ENAAP COIMBRA</a>
 				</div>
-
-			</div>
-		</header>
-	</div>
+			</nav>
+</header>
 
 	<!-- Conteudo ––––––––––––––––––––––––––––––––––––––––––––––––––-->
 	<div class="main-container">
 		<center>
-			<img id="IMG25" src="../assets/img/24.jpg">
+			<img id="IMG25" src="../assets/img/24.png">
 		</center>
 			<div class="container">
 				<div class="row">
