--- a/Oradores.html
+++ b/Oradores.html
@@ -10,6 +10,7 @@
     <!-- Mobile Specific Metas –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+	<link rel="shortcut icon" href="assets/img/favicon.png">
 	<!--link rel="stylesheet" href="../assets/puglins/fontawesome/web-fonts-with-css/css/fontawesome-all.css"-->
 	<link rel="shortcut icon" href="assets/img/favicon.ico">
 	<link rel="stylesheet" href="../assets/css/normalize.min.css">
