--- a/Inscrições.html
+++ b/Inscrições.html
@@ -159,7 +159,7 @@
 								<center>
 									<div class="section-desc">
 										<h5>
-											<button type="button" class="btn btn-outline-danger" disabled>Brevemente</button>
+											<button type="button" class="btn btn-outline-danger" href="https://docs.google.com/forms/d/e/1FAIpQLSehoLcHqvkr9DubKlC-lUdyHP2wyL6RgGKUTs_0U6z1M0qvdw/viewform">Inscreve-te</button>
 										</h5>
 									</div>
 								</center>
