--- a/Oradores.html
+++ b/Oradores.html
@@ -79,7 +79,7 @@
 			<div class = "row">
 				<div class = "col-md-12">
 					<center>
-						<h3 id = ORADORESH3> Por anunciar</h3>
+						<img src="assets/img/27.jpg">
 					</center>
 				</div>
 			</div>
