--- a/Programa.html
+++ b/Programa.html
@@ -88,7 +88,8 @@
 						<i class="fas fa-angle-double-up"></i>
 					</a>
 				</div>
-                <a href="https://www.facebook.com/appfuturo.listaf/"><i id="fb" class="fab fa-facebook fa-3x"></i></a>
+				<a href="https://www.linkedin.com/in/enaap-coimbra-5ab959197"><i id="lk" class="fab fa-linkedin fa-3x"></i></a>
+				<a href="https://www.facebook.com/appfuturo.listaf/"><i id="fb" class="fab fa-facebook fa-3x"></i></a>
 				<a href="https://www.instagram.com/enaap_coimbra2020/"><i id="ig" class="fab fa-instagram fa-3x"></i></a>
 				<a id="email" href="Contactos#form">Dúvidas? Consulta-nos</a>
 			</div>
