--- a/Oradores.html
+++ b/Oradores.html
@@ -85,6 +85,49 @@
 				</div>
 			</div>-->
 			
+			<div id="SlideshowOradoresMobile" class="carousel slide" data-ride="carousel">
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<div id = "PC" class = "row">
+							<div class = "col-md-4 header-slider">
+								<h3 class="text-center">Pedro Correia</h3>
+							</div>
+							<div class = "col-md-4 imagem-slider">
+								<img id="IMG31" src="/assets/img/31.jpg">
+							</div>
+							<div class = "col-md-4 texto-slider">
+								<p class="text-center">Doutor em Ciências Sociais na Especialidade de Administração Pública (ISCSP-UTL) e Professor Auxiliar nas áreas de Administração Pública, Análise de Dados e Gestão de Recursos humanos.</p>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "JB" class = "row">
+							<div class = "col-md-4 header-slider">
+								<h3 class="text-center">João Bilhim</h3>
+							</div>
+							<div class = "col-md-4 imagem-slider">
+								<img id="IMG29" src="/assets/img/29.jpg">
+							</div>
+							<div class = "col-md-4 texto-slider">
+								<p class="text-center">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor no ISCSP.</p>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-4 header-slider">
+								<h3 class="text-center">Ireneu Mendes</h3>
+							</div>
+							<div class = "col-md-4 imagem-slider">
+								<img id="IMG28" src="/assets/img/28.jpg">
+							</div>
+							<div class = "col-md-4 texto-slider">
+								<p class="text-center">Lincenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC) e Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP).</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div id="SlideshowOradores" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
@@ -148,8 +191,7 @@
 						<i class="fas fa-angle-double-up"></i>
 					</a>
 				</div>
-                <a href="https://www.linkedin.com/in/enaap-coimbra-5ab959197"><i id="lk" 
-				style="color: white; position: relative; right: 50px; top: 10px;" class="fab fa-linkedin fa-3x" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/enaap-coimbra-5ab959197/"><i id="lki" class="fab fa-linkedin fa-3x"></i></a>
 				<a href="https://www.facebook.com/appfuturo.listaf/"><i id="fb" class="fab fa-facebook fa-3x"></i></a>
 				<a href="https://www.instagram.com/enaap_coimbra2020/"><i id="ig" class="fab fa-instagram fa-3x"></i></a>
 				<a id="email" href="Contactos#form">Dúvidas? Consulta-nos</a>
