--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				<h2 class="section-title">-Patrocinadores-</h2>
 			</div>
 			<div id="index" class = "container">
-				<div class = "row ">
+				<div class = "row justify-content-center">
 					<div class = "col-3 justify-content-center">
 						<center>
 							<img class="patrocinadores" src ="/assets/img/32.png">
