--- a/Oradores.html
+++ b/Oradores.html
@@ -125,6 +125,58 @@
 							</div>
 						</div>
 					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-4 header-slider">
+							<h3 class="text-center">Domingos Xavier Viegas</h3>
+							</div>
+							<div class = "col-md-4 imagem-slider">
+								<img id="IMG28" src="/assets/img/37.jpg">
+							</div>
+							<div class = "col-md-4 texto-slider">
+								<p class="text-center">Docente no Departamento de Engenharia Mecânica da Faculdade de Ciências e Tecnologia da Universidade de Coimbra(FCTUC) e Diretor do Centro de Estudos sobre Incêndios Florestais.</p>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-4 header-slider">
+							<h3 class="text-center">José Miguel Medeiros</h3>
+							</div>
+							<div class = "col-md-4 imagem-slider">
+								<img id="IMG28" src="/assets/img/39.jpg">
+							</div>
+							<div class = "col-md-4 texto-slider">
+								<p class="text-center">Ex Secretário de Estado da Proteção Civil, Ex-Governador Civil de Leiria e atual Gestor da empresa pública de gestão florestal - FloresGal.</p>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-4 header-slider">
+							<h3 class="text-center">Jaime Marta Soares</h3>
+							</div>
+							<div class = "col-md-4 imagem-slider">
+								<img id="IMG28" src="/assets/img/38.jpg">
+							</div>
+							<div class = "col-md-4 texto-slider">
+								<p class="text-center">Ex-Deputado pelo PSD, Ex-Presidente da Câmara Municipal da Vila Nova de Poiares e atual presidente da Liga dos Bombeiros, desde 2011.</p>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-4 header-slider">
+							<h3 class="text-center">José Carlos Alexandrino</h3>
+							</div>
+							<div class = "col-md-4 imagem-slider">
+								<img id="IMG28" src="/assets/img/36.png">
+							</div>
+							<div class = "col-md-4 texto-slider">
+								<p class="text-center">Presidente da Câmara Municipal de Oliveira do Hospital e Presidente da Comunidade Intermunicipal da Região de Coimbra.</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div id="SlideshowOradores" class="carousel slide" data-ride="carousel">
@@ -165,6 +217,58 @@
 							</div>
 							<div class = "col-md-5 imagem-slider">
 								<img id="IMG28" src="/assets/img/28.jpg">
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-7 texto-slider">
+								<p></p>
+								<h3 class="text-right">Domingos Xavier Viegas</h3>
+								<p></p>
+								<p class="text-right">Docente no Departamento de Engenharia Mecânica da Faculdade de Ciências e Tecnologia da Universidade de Coimbra(FCTUC) e Diretor do Centro de Estudos sobre Incêndios Florestais.</p>
+							</div>
+							<div class = "col-md-5 imagem-slider">
+								<img id="IMG28" src="/assets/img/37.jpg">
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-7 texto-slider">
+								<p></p>
+								<h3 class="text-right">José Miguel Medeiros</h3>
+								<p></p>
+								<p class="text-right">Ex Secretário de Estado da Proteção Civil, Ex-Governador Civil de Leiria e atual Gestor da empresa pública de gestão florestal - FloresGal.</p>
+							</div>
+							<div class = "col-md-5 imagem-slider">
+								<img id="IMG28" src="/assets/img/39.jpg">
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-7 texto-slider">
+								<p></p>
+								<h3 class="text-right">Jaime Marta Soares</h3>
+								<p></p>
+								<p class="text-right">Ex-Deputado pelo PSD, Ex-Presidente da Câmara Municipal da Vila Nova de Poiares e atual presidente da Liga dos Bombeiros, desde 2011.</p>
+							</div>
+							<div class = "col-md-5 imagem-slider">
+								<img id="IMG28" src="/assets/img/38.jpg">
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-7 texto-slider">
+								<p></p>
+								<h3 class="text-right">José Carlos Alexandrino</h3>
+								<p></p>
+								<p class="text-right">Presidente da Câmara Municipal de Oliveira do Hospital e Presidente da Comunidade Intermunicipal da Região de Coimbra.</p>
+							</div>
+							<div class = "col-md-5 imagem-slider">
+								<img id="IMG28" src="/assets/img/36.png">
 							</div>
 						</div>
 					</div>
