--- a/index.html
+++ b/index.html
@@ -180,22 +180,24 @@
 			</div>
 			<div id="index" class = "container">
 				<div class = "row justify-content-center">
-					<div class = "col-md-2">
+					<div class = "col-md-3">
 						<center>
 							<img class="patrocinadores" src ="/assets/img/32.png">
 						</center>
 					</div>
-					<div class = "col-md-2">
+					<div class = "col-md-3">
 						<center>
 							<img class="patrocinadores" src ="/assets/img/33.png">
 						</center>
 					</div>
-					<div class = "col-md-2">
+					<div class = "col-md-3">
 						<center>
 							<img class="patrocinadores" src ="/assets/img/34.png">
 						</center>
 					</div>
-					<div class = "col-md-2">
+				</div>
+				<div class = "row justify-content-center">
+					<div class = "col-md-8">
 						<center>
 							<img class="patrocinadores" src ="/assets/img/35.jpg">
 						</center>
