--- a/Inscrições.html
+++ b/Inscrições.html
@@ -81,19 +81,7 @@
 											</div>
 											<div id="textoPack1">
 												<p>
-													Estadia incluída no hotel D.Inês.
-												</p>
-												<p>
-													Refeições incluídas.
-												</p>
-												<p>
-													Participação em palestras.
-												</p>
-												<p>
-													Participação em workshops.
-												</p>
-												<p>
-													Custo: 85€
+													Esgotado
 												</p>
 											</div>
 										</div>
