--- a/index.html
+++ b/index.html
@@ -180,9 +180,14 @@
 			</div>
 			<div id="index" class = "container">
 				<div class = "row justify-content-center">
-					<div class = "col-md-8">
+					<div class = "col-md-6">
 						<center>
 							<img class="patrocinadores" src ="/assets/img/35.jpg">
+						</center>
+					</div>
+					<div class = "col-md-6">
+						<center>
+							<img class="patrocinadores" src ="/assets/img/41.png">
 						</center>
 					</div>
 				</div>
@@ -200,6 +205,11 @@
 					<div class = "col-md-3">
 						<center>
 							<img class="patrocinadores" src ="/assets/img/34.png">
+						</center>
+					</div>
+					<div class = "col-md-3">
+						<center>
+							<img class="patrocinadores" src ="/assets/img/42.png">
 						</center>
 					</div>
 				</div>
