--- a/Inscrições.html
+++ b/Inscrições.html
@@ -98,7 +98,7 @@
 					</section>
 				</div>
 				<div class="col-md-6">
-					img id="IMG26" src="../assets/img/26.jpg">
+					<img id="IMG26" src="../assets/img/26.jpg">
 				</div>
 			</div>
 			<div class="row">
