--- a/Inscrições.html
+++ b/Inscrições.html
@@ -77,7 +77,7 @@
 									<div class = "row">
 										<div class="col-md-6"> 
 											<div class="section-title-area">
-												<h2 class="section-title">Pack 1</h2>
+												<h2 class="section-title">Pack 1 - Lote 2</h2>
 											</div>
 											<div id="textoPack1">
 												<p>
