--- a/Oradores.html
+++ b/Oradores.html
@@ -272,6 +272,45 @@
 							</div>
 						</div>
 					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-7 texto-slider">
+								<p></p>
+								<h3 class="text-right">Pedro Costa Gonçalves</h3>
+								<p></p>
+								<p class="text-right">Doutor em Direito (Ciências Jurídico-Políticas), Professor Associado da FDUC e Diretor Executivo Centro de Estudos de Direito Público e Regulação (CEDIPRE - FDUC).</p>
+							</div>
+							<div class = "col-md-5 imagem-slider">
+								<img id="IMG28" src="/assets/img/40.jpg">
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-7 texto-slider">
+								<p></p>
+								<h3 class="text-right">Carla Machado</h3>
+								<p></p>
+								<p class="text-right">Licenciada, Mestre e Doutorada em Direito Público todos pela FDUC, Assistente Convidada na FDUC e Adjunta da Ministra da Presidência e da Modernização Administrativa no XXI Governo Constitucional.</p>
+							</div>
+							<div class = "col-md-5 imagem-slider">
+								<img id="IMG28" src="/assets/img/41.jpg">
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div id = "IM" class = "row">
+							<div class = "col-md-7 texto-slider">
+								<p></p>
+								<h3 class="text-right">Nuno Silva</h3>
+								<p></p>
+								<p class="text-right">Doutorado em Processos Políticos Contemporâneos - Linha de investigação em Gestão Pública (Universidade de Santiago de Compostela). Mestre em Administração Pública pela Universidade do Minho e Professor convidado equiparado a Professor Auxiliar na Escola de Economia e Gestão - DRIAP da Universidade do Minho.</p>
+							</div>
+							<div class = "col-md-5 imagem-slider">
+								<img id="IMG28" src="/assets/img/43.png">
+							</div>
+						</div>
+					</div>
 				</div>
 				<a class="carousel-control-prev" href="#SlideshowOradores" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
