--- a/Inscrições.html
+++ b/Inscrições.html
@@ -159,7 +159,7 @@
 							<center>
 								<div class="section-desc">
 									<h5>
-										<a type="button" role="button" class="btn btn-outline-danger" href="https://docs.google.com/forms/d/e/1FAIpQLSehoLcHqvkr9DubKlC-lUdyHP2wyL6RgGKUTs_0U6z1M0qvdw/viewform">Inscreve-te</a>
+										<a type="button" role="button" class="btn btn-outline-danger btn-lg disabled" aria-disabled="true" href="https://docs.google.com/forms/d/e/1FAIpQLSehoLcHqvkr9DubKlC-lUdyHP2wyL6RgGKUTs_0U6z1M0qvdw/viewform">Inscreve-te</a>
 									</h5>
 								</div>
 							</center>
