--- a/Oradores.html
+++ b/Oradores.html
@@ -111,7 +111,7 @@
 								<img id="IMGCarousel" src="/assets/img/29.jpg">
 							</div>
 							<div class = "col-md-4 texto-slider">
-								<p class="text-center">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor no ISCSP.</p>
+								<p class="text-center">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor Jubilado no ISCSP.</p>
 							</div>
 						</div>
 					</div>
@@ -124,7 +124,7 @@
 								<img id="IMGCarousel" src="/assets/img/28.jpg">
 							</div>
 							<div class = "col-md-4 texto-slider">
-								<p class="text-center">Lincenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC) e Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP).</p>
+								<p class="text-center">Lincenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP) e Professor Assistente no ISCSP</p>
 							</div>
 						</div>
 					</div>
