--- a/Oradores.html
+++ b/Oradores.html
@@ -263,7 +263,7 @@
 								<p></p>
 								<h3 class="text-right">João Bilhim</h3>
 								<p></p>
-								<p class="text-right">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor no ISCSP.</p>
+								<p class="text-right">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor Jubilado no ISCSP.</p>
 							</div>
 							<div class = "col-md-5 imagem-slider">
 								<img id="IMGCarousel" src="/assets/img/29.jpg">
@@ -276,7 +276,7 @@
 								<p></p>
 								<h3 class="text-right">Ireneu Mendes</h3>
 								<p></p>
-								<p class="text-right">Lincenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC) e Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP).</p>
+								<p class="text-center">Lincenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP) e Professor Assistente no ISCSP</p>
 							</div>
 							<div class = "col-md-5 imagem-slider">
 								<img id="IMGCarousel" src="/assets/img/28.jpg">
