--- a/Oradores.html
+++ b/Oradores.html
@@ -98,7 +98,7 @@
 								<img id="IMGCarousel" src="/assets/img/31.jpg">
 							</div>
 							<div class = "col-md-4 texto-slider">
-								<p class="text-center">Doutor em Ciências Sociais na Especialidade de Administração Pública (ISCSP-UTL) e Professor Auxiliar nas áreas de Administração Pública, Análise de Dados e Gestão de Recursos humanos.</p>
+								<p class="text-center">Professor Auxiliar. Leciona nas áreas de Administração Pública, Análise de Dados e Gestão de Recursos Humanos. Investigador Integrado do Centro de Administração e Políticas Públicas (CAPP, ISCSP-ULisboa); Investigador Colaborador do Centro Interdisciplinar de Estudos de Género (CIEG, ISCSP-ULisboa);</p>
 							</div>
 						</div>
 					</div>
@@ -111,7 +111,7 @@
 								<img id="IMGCarousel" src="/assets/img/29.jpg">
 							</div>
 							<div class = "col-md-4 texto-slider">
-								<p class="text-center">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor Jubilado no ISCSP.</p>
+								<p class="text-center">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor Catedrático Jubilado no ISCSP.</p>
 							</div>
 						</div>
 					</div>
@@ -250,7 +250,7 @@
 								<p></p>
 								<h3 class="text-right">Pedro Correia</h3>
 								<p></p>
-								<p class="text-right">Doutor em Ciências Sociais na Especialidade de Administração Pública (ISCSP-UTL) e Professor Auxiliar nas áreas de Administração Pública, Análise de Dados e Gestão de Recursos humanos.</p>
+								<p class="text-right">Professor Auxiliar. Leciona nas áreas de Administração Pública, Análise de Dados e Gestão de Recursos Humanos. Investigador Integrado do Centro de Administração e Políticas Públicas (CAPP, ISCSP-ULisboa); Investigador Colaborador do Centro Interdisciplinar de Estudos de Género (CIEG, ISCSP-ULisboa);</p>
 							</div>
 							<div class = "col-md-5 imagem-slider">
 								<img id="IMGCarousel" src="/assets/img/31.jpg">
@@ -263,7 +263,7 @@
 								<p></p>
 								<h3 class="text-right">João Bilhim</h3>
 								<p></p>
-								<p class="text-right">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor Jubilado no ISCSP.</p>
+								<p class="text-right">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor Catedrático Jubilado no ISCSP.</p>
 							</div>
 							<div class = "col-md-5 imagem-slider">
 								<img id="IMGCarousel" src="/assets/img/29.jpg">
