--- a/Contactos.html
+++ b/Contactos.html
@@ -78,7 +78,7 @@
 							<table width="450px">
 								<tr>
 									<td valign="top">
-										<label for="first_name">First Name *</label>
+										<label for="first_name">Primeiro Nome *</label>
 									</td>
 									<td valign="top">
 										<input  type="text" name="first_name" maxlength="50" size="30">
@@ -86,7 +86,7 @@
 								</tr>
 								<tr>
 									<td valign="top"">
-										<label for="last_name">Last Name *</label>
+										<label for="last_name">Último nome *</label>
 									</td>
 									<td valign="top">
 										<input  type="text" name="last_name" maxlength="50" size="30">
@@ -94,7 +94,7 @@
 								</tr>
 								<tr>
 									<td valign="top">
-										<label for="email">Email Address *</label>
+										<label for="email">Email *</label>
 									</td>
 									<td valign="top">
 										<input  type="text" name="email" maxlength="80" size="30">
@@ -102,7 +102,7 @@
 								</tr>
 								<tr>
 									<td valign="top">
-										<label for="telephone">Telephone Number</label>
+										<label for="telephone">Número telemóvel</label>
 									</td>
 									<td valign="top">
 										<input  type="text" name="telephone" maxlength="30" size="30">
@@ -110,7 +110,7 @@
 								</tr>
 								<tr>
 									<td valign="top">
-										<label for="comments">Comments *</label>
+										<label for="comments">Descrição *</label>
 									</td>
 									<td valign="top">
 										<textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
@@ -118,7 +118,7 @@
 								</tr>
 								<tr>
 									<td colspan="2" style="text-align:center">
-										<input type="submit" value="Submit">   
+										<input type="submit" value="Submeter">   
 									</td>
 								</tr>
 							</table>
