--- a/Programa.html
+++ b/Programa.html
@@ -73,31 +73,41 @@
 						</center>
 					</div>
 					<div class="section-desc">
-						<ul class="nav nav-tabs justify-content-center" id="programa" role="tablist">
+						<ul class="nav nav-tabs nav justify-content-center" id="programa" role="tablist">
 							<li class="nav-item">
-								<a class="nav-link active" id="dia17Tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Dia 17</a>
+								<a class="nav-link active" id="dia17-tab" data-toggle="tab" href="#dia17" role="tab" aria-controls="home" aria-selected="true">
+									Dia 17
+								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link nav-link disabled" id="dia18Tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Dia 18</a>
+								<a class="nav-link" id="dia18-tab" data-toggle="tab" href="#dia18" role="tab" aria-controls="profile" aria-selected="false">
+									Dia 18
+								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link nav-link disabled" id="dia19Tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Dia 19</a>
+								<a class="nav-link nav-link disabled" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"  aria-selected="false">
+									Dia 19
+								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link nav-link disabled" id="dia20Tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Dia 20</a>
+								<a class="nav-link nav-link disabled" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">
+									Dia 20
+								</a>
 							</li>
 						</ul>
 						<div class="tab-content" id="programaContent">
-							<div class="tab-pane fade show active" id="dia17" role="tabpanel" aria-labelledby="dia17Tab">
-							<center>
-								<img class="img-fluid" alt="Responsive image" src="../assets/img/p17.jpg">
-							</center>
+							<div class="tab-pane fade show active" id="dia17" role="tabpanel" aria-labelledby="home-tab">
+								<center>
+									<img class="img-fluid" alt="Responsive image" src="../assets/img/p17.jpg">
+								</center>
 							</div>
-							<div class="tab-pane fade" id="dia18" role="tabpanel" aria-labelledby="dia18Tab">
-								
+							<div class="tab-pane fade" id="dia18" role="tabpanel" aria-labelledby="profile-tab">
+								<center>
+									<img class="img-fluid" alt="Responsive image" src="../assets/img/p18.jpg">
+								</center>
 							</div>
-							<div class="tab-pane fade" id="dia19" role="tabpanel" aria-labelledby="dia19Tab">...</div>
-							<div class="tab-pane fade" id="dia20" role="tabpanel" aria-labelledby="dia20Tab">...</div>
+							<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+							<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
 						</div>
 					</div>
 				</div>
