--- a/Oradores.html
+++ b/Oradores.html
@@ -124,7 +124,7 @@
 								<img id="IMGCarousel" src="/assets/img/28.jpg">
 							</div>
 							<div class = "col-md-4 texto-slider">
-								<p class="text-center">Lincenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP) e Professor Assistente no ISCSP</p>
+								<p class="text-center">Licenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP), Assistente no ISCSP e Professor Auxiliar na FDUC</p>
 							</div>
 						</div>
 					</div>
