--- a/Oradores.html
+++ b/Oradores.html
@@ -111,7 +111,7 @@
 								<img id="IMGCarousel" src="/assets/img/29.jpg">
 							</div>
 							<div class = "col-md-4 texto-slider">
-								<p class="text-center">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor Catedrático Jubilado no ISCSP.</p>
+								<p class="text-center">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor Catedrático Jubilado no ISCSP. Tem experiência de ensino, investigação e consultoria na área de Administração, com ênfase em Administração Pública e de Recursos Humanos.</p>
 							</div>
 						</div>
 					</div>
@@ -124,7 +124,7 @@
 								<img id="IMGCarousel" src="/assets/img/28.jpg">
 							</div>
 							<div class = "col-md-4 texto-slider">
-								<p class="text-center">Licenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP), Assistente no ISCSP e Professor Auxiliar na FDUC</p>
+								<p class="text-center">Doutorando no ISCSP e Licenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP), Assistente no ISCSP e Professor Auxiliar na FDUC</p>
 							</div>
 						</div>
 					</div>
@@ -367,7 +367,7 @@
 								<p></p>
 								<h3 class="text-right">João Bilhim</h3>
 								<p></p>
-								<p class="text-right">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor Catedrático Jubilado no ISCSP.</p>
+								<p class="text-right">Ex-Presidente da Comissão de Recrutamento e Seleção para a Administração Pública (CReSAP) e atual Professor Catedrático Jubilado no ISCSP. Tem experiência de ensino, investigação e consultoria na área de Administração, com ênfase em Administração Pública e de Recursos Humanos.</p>
 							</div>
 							<div class = "col-md-5 imagem-slider">
 								<img id="IMGCarousel" src="/assets/img/29.jpg">
@@ -380,7 +380,7 @@
 								<p></p>
 								<h3 class="text-right">Ireneu Mendes</h3>
 								<p></p>
-								<p class="text-center">Lincenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP) e Professor Assistente no ISCSP</p>
+								<p class="text-center">Doutorando no ISCSP e Licenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP), Assistente no ISCSP e Professor Auxiliar na FDUC</p>
 							</div>
 							<div class = "col-md-5 imagem-slider">
 								<img id="IMGCarousel" src="/assets/img/28.jpg">
