--- a/index.html
+++ b/index.html
@@ -329,6 +329,61 @@
 								<img class="patrocinadores" src ="/assets/img/42.png">
 							</center>
 						</div>
+					</div>
+					<div class = "row jutify-content-center">
+						<div class = "col-md-3">
+							<center>
+								<img class="patrocinadores" src="/assets/img/51.png">
+							</center>
+						</div>
+						<div class = "col-md-3">
+							<center>
+								<img class="patrocinadores" src="/assets/img/52.png">
+							</center>
+						</div>
+						<div class = "col-md-3">
+							<center>
+								<img class="patrocinadores" src="/assets/img/54.png">
+							</center>
+						</div>
+						<div class = "col-md-3">
+							<center>
+								<img class="patrocinadores" src="/assets/img/53.png">
+							</center>
+						</div>
+					</div>
+					<div class = "row jutify-content-center">
+						<div class = "col-md-3">
+							<center>
+								<img class="patrocinadores" src="/assets/img/55.jpg">
+							</center>
+						</div>
+						<div class = "col-md-3">
+							<center>
+								<img class="patrocinadores" src="/assets/img/56.png">
+							</center>
+						</div>
+						<div class = "col-md-3">
+							<center>
+								<img class="patrocinadores" src="/assets/img/57.jpg">
+							</center>
+						</div>
+						<div class = "col-md-3">
+							<center>
+								<img class="patrocinadores" src="/assets/img/58.png">
+							</center>
+						</div>
+					</div>
+					<div class = "row justify-content-md-center">
+						<div class = "col-md-3">
+							<center>
+								<img class="patrocinadores" src="/assets/img/59.png">
+							</center>
+						</div>
+						<div class = "col-md-3">
+							<center>
+								<img class="patrocinadores" src="/assets/img/60.jpg">
+							</center>
 						</div>
 					</div>
 				</div>	
