--- a/Oradores.html
+++ b/Oradores.html
@@ -124,7 +124,7 @@
 								<img id="IMGCarousel" src="/assets/img/28.jpg">
 							</div>
 							<div class = "col-md-4 texto-slider">
-								<p class="text-center">Doutorando no ISCSP e Licenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP), Assistente no ISCSP e Professor Auxiliar na FDUC</p>
+								<p class="text-center">Doutorando no ISCSP e Licenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP), Professor Auxiliar Convidado no ISCSP e Assistente na FDUC</p>
 							</div>
 						</div>
 					</div>
@@ -380,7 +380,7 @@
 								<p></p>
 								<h3 class="text-right">Ireneu Mendes</h3>
 								<p></p>
-								<p class="text-center">Doutorando no ISCSP e Licenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP), Assistente no ISCSP e Professor Auxiliar na FDUC</p>
+								<p class="text-center">Doutorando no ISCSP e Licenciado em Administração Público-Privada (FDUC), Mestre em Administração Público Empresarial (FDUC), Investigador colaborador do Centro de Administração e Políticas Públicas (CAPP-ISCSP), Professor Auxiliar Convidado no ISCSP e Assistente na FDUC</p>
 							</div>
 							<div class = "col-md-5 imagem-slider">
 								<img id="IMGCarousel" src="/assets/img/28.jpg">
