--- a/Programa.html
+++ b/Programa.html
@@ -80,17 +80,17 @@
 								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" id="dia18-tab" data-toggle="tab" href="#dia18" role="tab" aria-controls="profile" aria-selected="false">
+								<a class="nav-link" id="dia18-tab" data-toggle="tab" href="#dia18" role="tab" aria-controls="home" aria-selected="true">
 									Dia 18
 								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link nav-link disabled" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"  aria-selected="false">
+								<a class="nav-link" id="dia19-tab" data-toggle="tab" href="#dia19" role="tab" aria-controls="home" aria-selected="true">
 									Dia 19
 								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link nav-link disabled" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">
+								<a class="nav-link" id="dia20-tab" data-toggle="tab" href="#dia20" role="tab" aria-controls="home" aria-selected="true">
 									Dia 20
 								</a>
 							</li>
@@ -101,13 +101,21 @@
 									<img class="img-fluid" alt="Responsive image" src="../assets/img/p17.jpg">
 								</center>
 							</div>
-							<div class="tab-pane fade" id="dia18" role="tabpanel" aria-labelledby="profile-tab">
+							<div class="tab-pane fade" id="dia18" role="tabpanel" aria-labelledby="home-tab">
 								<center>
 									<img class="img-fluid" alt="Responsive image" src="../assets/img/p18.jpg">
 								</center>
 							</div>
-							<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
-							<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+							<div class="tab-pane fade" id="dia19" role="tabpanel" aria-labelledby="home-tab">
+								<center>
+									<img class="img-fluid" alt="Responsive image" src="../assets/img/p19.jpg">
+								</center>
+							</div>
+							<div class="tab-pane fade" id="dia20" role="tabpanel" aria-labelledby="home-tab">
+								<center>
+									<img class="img-fluid" alt="Responsive image" src="../assets/img/p20.jpg">
+								</center>
+							</div>
 						</div>
 					</div>
 				</div>
