--- a/index.html
+++ b/index.html
@@ -64,21 +64,23 @@
 		
 		<!-- Conteudo ––––––––––––––––––––––––––––––––––––––––––––––––––-->
 		<div class="main-container">
-			<img id="IMG22" src="assets/img/22.png">
-			<div class="embed-responsive embed-responsive-16by9">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4gvIw8XM1Lg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-			<div class="main wrapper clearfix">
-				<div class="section-title-area">
-					<div class="row">
-						<div id="VIDZINDEX" class="col-md-12">
-							<!--iframe id="VIDZINDEX" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe-->
+			<center>
+				<img id="IMG22" src="assets/img/22.png">
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4gvIw8XM1Lg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<div class="main wrapper clearfix">
+					<div class="section-title-area">
+						<div class="row">
+							<div id="VIDZINDEX" class="col-md-12">
+								<!--iframe id="VIDZINDEX" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe-->
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="section-title-area">
-					<h2 class="section-title">-Oradores Palestras-</h2>
-				</div>
+					<div class="section-title-area">
+						<h2 class="section-title">-Oradores Palestras-</h2>
+					</div>
+				</center>
 				<div id="index" class = "container">
 					<div class = "row">
 						<div class = "col-md-4">
