--- a/Contactos.html
+++ b/Contactos.html
@@ -38,19 +38,19 @@
 					<div class="collapse navbar-collapse" id="navbarResponsive">
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item active">
-								<a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
+								<a class="nav-link" href="Index">Home</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="Oradores"> Oradores</a>
+								<a class="nav-link" href="Oradores">Oradores</a>
 							</li>
 							<li>
-								<a class="nav-link" href="Contactos"> Contactos</a>
+								<a class="nav-link" href="Contactos">Contactos<span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="Programa">Programa</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="Inscrições" >Inscrições</a>
+								<a class="nav-link" href="Inscrições">Inscrições</a>
 							</li>
 						</ul>
 					</div>
