--- a/Inscrições.html
+++ b/Inscrições.html
@@ -43,16 +43,15 @@
 							<li class="nav-item">
 								<a class="nav-link" href="Oradores">Oradores</a>
 							</li>
-							<li>
+							<li class="nav-item">>
 								<a class="nav-link" href="Contactos">Contactos</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="Programa">Programa</a>
 							</li>
-							<li class="nav-item">
-								<a class="nav-link active" href="Inscrições">Inscrições<span class="sr-only">(current)</span></a>
+							<li class="nav-item active">
+								<a class="nav-link" href="Inscrições">Inscrições<span class="sr-only">(current)</span></a>
 							</li>
-							
 						</ul>
 					</div>
 				</div>
