--- a/Contactos.html
+++ b/Contactos.html
@@ -37,14 +37,14 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarResponsive">
 						<ul class="navbar-nav ml-auto">
-							<li class="nav-item active">
+							<li class="nav-item">
 								<a class="nav-link" href="Index">Home</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="Oradores">Oradores</a>
 							</li>
-							<li>
-								<a class="nav-link" href="Contactos">Contactos<span class="sr-only">(current)</span></a>
+							<li class="nav-item">>
+								<a class="nav-link active" href="Contactos">Contactos<span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="Programa">Programa</a>
