--- a/Programa.html
+++ b/Programa.html
@@ -38,17 +38,17 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarResponsive">
 						<ul class="navbar-nav ml-auto">
-							<li class="nav-item active">
+							<li class="nav-item">
 								<a class="nav-link" href="index">Home</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="Oradores"> Oradores</a>
 							</li>
-							<li>
+							<li class="nav-item">>
 								<a class="nav-link" href="Contactos">Contactos</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="Programa">Programa<span class="sr-only">(current)</span></a>
+								<a class="nav-link active" href="Programa">Programa<span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="Inscrições">Inscrições</a>
