--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<li class="nav-item">
 								<a class="nav-link" href="Oradores"> Oradores</a>
 							</li>
-							<li>
+							<li class="nav-item">>
 								<a class="nav-link" href="Contactos"> Contactos</a>
 							</li>
 							<li class="nav-item">
