--- a/Contactos.html
+++ b/Contactos.html
@@ -43,8 +43,8 @@
 							<li class="nav-item">
 								<a class="nav-link" href="Oradores">Oradores</a>
 							</li>
-							<li class="nav-item">>
-								<a class="nav-link active" href="Contactos">Contactos<span class="sr-only">(current)</span></a>
+							<li class="nav-item active">
+								<a class="nav-link" href="Contactos">Contactos<span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="Programa">Programa</a>
