--- a/Oradores.html
+++ b/Oradores.html
@@ -42,8 +42,8 @@
 							</li>
 							<li class="nav-item active">
 								<a class="nav-link" href="Oradores">Oradores<span class="sr-only">(current)</span></a>
-							</li class="nav-item">>
-							<li>
+							</li>
+							<li class="nav-item">
 								<a class="nav-link" href="Contactos">Contactos</a>
 							</li>
 							<li class="nav-item">
