--- a/Programa.html
+++ b/Programa.html
@@ -41,13 +41,13 @@
 								<a class="nav-link" href="index">Home</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="Oradores"> Oradores</a>
-							</li>
-							<li class="nav-item">>
-								<a class="nav-link" href="Contactos">Contactos</a>
+								<a class="nav-link" href="Oradores">Oradores</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link active" href="Programa">Programa<span class="sr-only">(current)</span></a>
+								<a class="nav-link" href="Contactos">Contactos</a>
+							</li>
+							<li class="nav-item active">
+								<a class="nav-link" href="Programa">Programa<span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="Inscrições">Inscrições</a>
