--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<li class="nav-item">
 								<a class="nav-link" href="Oradores"> Oradores</a>
 							</li>
-							<li class="nav-item">>
+							<li class="nav-item">
 								<a class="nav-link" href="Contactos"> Contactos</a>
 							</li>
 							<li class="nav-item">
